[package]
name = "my-redis"
version = "0.1.0"
authors = ["Lewis Boon <4803529+labooner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
